<resources>
    <string name="app_name">Accton Irrigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Accton Irrigation</string>
    <string name="nav_header_subtitle">anonymous</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Title texts -->
    <string name="title_device">Device</string>
    <string name="title_info">Info</string>
    <string name="title_signin">Sign In</string>
    <string name="title_signout">Sign out</string>
    <string name="title_dropbox">Backup Account</string>
    <string name="title_about">About</string>
    <string name="title_help">Online Help</string>
    <string name="title_user_sign_in">User Sign In</string>
    <string name="title_user_register">User Register</string>
    <!-- TODO: Account -->
    <string name="user_forgetpwd_text">Forget password?</string>
    <string name="user_sign_in">Sign In</string>
    <string name="user_name">Name</string>
    <string name="user_password">Password</string>
    <string name="reset_password_success">Reset User Password</string>
    <string name="user_error_empty_name">Username is empty</string>
    <string name="user_error_empty_password">Password is empty</string>
    <!-- TODO: About -->
    <string name="about_version">Android Version</string>
    <string name="about_copyright">Copyright Accton Technology Corporation</string>
    <string name="about_website">http://www.irrigation.com</string>
    <string name="about_privacy">Privacy Policy</string>
    <string name="about_privacy_website">http://www.irrigation.com/privacy.htm</string>
    <string name="sure_to_sign_out">Are you sure to sign out</string>
    <!-- TODO: Dialog -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="quit">Quit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- TODO: popup menu text -->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_zoom">Zoom</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_new">New</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_remove">Remove</string>
</resources>
