<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_invert_gradlient" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/icon_irrigation_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/irrigation_title_blue"
            android:text="@string/app_name"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="66dp"
            android:text="@string/about_version"
            android:textColor="@color/irrigation_about_version"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/website"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:textColorLink="@color/irrigation_about_link"
            android:text="@string/about_website"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/privacy"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textColorLink="@color/irrigation_about_link"
            android:text="@string/about_privacy"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:layout_centerHorizontal="true"
            android:text="@string/about_copyright"
            android:textColor="@color/irrigation_about_copyright"
            android:textSize="14dp" />

    </LinearLayout>

</RelativeLayout>